syntax = "proto3";

package dnf.v1;

// Go代码生成选项
option go_package = "dnf/proto/v1;itemv1";

// Java代码生成选项（重要）
option java_multiple_files = true;  // 为每个消息生成独立的Java文件
option java_package = "com.dnfm.mina.protobuf.generated";
option java_outer_classname = "ItemTypesProto";

// 物品GUID
message ItemGuid {
  uint64 guid = 1;  // GUID
}

// 槽位附魔经验信息
message SlotEnchantExp {
  int32 etype = 1;  // 附魔类型
  int32 exp = 2;    // 经验值
}

// 槽位附魔信息
message SlotEnchantInfo {
  int32 slot = 1;                        // 槽位
  repeated SlotEnchantExp evalue = 2;  // 附魔值列表
}
